
add_subdirectory(linux-game/solve-sudoku)
add_subdirectory(university-code/read-up-down-left-right)

#add_subdirectory(cpp-standard-library)
#add_subdirectory(huge-number)
#add_subdirectory(linux-command)
#add_subdirectory(linux-function)
#add_subdirectory(linux-game)
#add_subdirectory(linux-network-program)

