
add_executable(
    algorithm-unittest
    min_element/min_element_unittest.cc
    min/min_unittest.cc
    max_element/max_element_unittest.cc
    max/max_unittest.cc
    minmax_element/minmax_element_unittest.cc
    minmax/minmax_unittest.cc
    iter_swap/iter_swap_unittest.cc
    swap_ranges/swap_ranges_unittest.cc
    copy/copy_unittest.cc
    copy_backward/copy_backward_unittest.cc
    copy_if/copy_if_unittest.cc
    copy_n/copy_n_unittest.cc
    count/count_unittest.cc
    count_if/count_if_unittest.cc
    equal/equal_unittest.cc
    lower_bound/lower_bound_unittest.cc
    upper_bound/upper_bound_unittest.cc
    equal_range/equal_range_unittest.cc
    binary_search/binary_search_unittest.cc
    fill/fill_unittest.cc
    fill_n/fill_n_unittest.cc
    for_each/for_each_unittest.cc
    generate/generate_unittest.cc
    generate_n/generate_n_unittest.cc
    find/find_unittest.cc
    search/search_unittest.cc
    search_n/search_n_unittest.cc
    find_end/find_end_unittest.cc
    find_first_of/find_first_of_unittest.cc
    find_if/find_if_unittest.cc
    find_if_not/find_if_not_unittest.cc
    adjacent_find/adjacent_find_unittest.cc
    all_of/all_of_unittest.cc
    any_of/any_of_unittest.cc
    none_of/none_of_unittest.cc
    includes/includes_unittest.cc
    lexicographical_compare/lexicographical_compare_unittest.cc
    merge/merge_unittest.cc
    inplace_merge/inplace_merge_unittest.cc
    mismatch/mismatch_unittest.cc
    move/move_unittest.cc
    move_backward/move_backward_unittest.cc
    is_partitioned/is_partitioned_unittest.cc
    )

target_link_libraries(algorithm-unittest gtest gtest_main pthread)  

